Primeras pruebas vue

--- a/website/src/components/hello/hello.html
+++ b/website/src/components/hello/hello.html
@@ -1,1 +1,8 @@
-<h1>Hello World</h1>
+<div class="app">
+    <h1>Hello World</h1>
+    <vg-button text="texto1"/>
+    <vg-button text="texto2"/>
+    <vg-button text="texto3"/>
+    <vg-list :items="items" :ordered="true" />
+    <vg-list :items="items" />
+</div>
